Correções na sidebar

--- a/homeusuario/index.html
+++ b/homeusuario/index.html
@@ -7,7 +7,8 @@
   <title>Helenão</title>
 </head>
 <body>
-  <header>
+
+  <header class="header-principal">
      <nav class="navbar section-content" role="navigation" aria-label="Menu principal">
   <div class="nav-left">
     <div class="icon">
@@ -30,7 +31,7 @@
     </div>
     <nav class="menu-lateral" role="navigation" aria-label="Menu lateral">
 
-      <a href="#"><span class="emoji">🧠</span> <span class="text">Flashcard</span></a>
+      <a href="/homeusuario/flashcards/index.html"><span class="emoji">🧠</span> <span class="text">Flashcard</span></a>
 
       <a href="/homeusuario/materias/materias.html"><span class="emoji">📚</span> <span class="text">Matérias</span></a>
 
