--- a/homeusuario/simulados/index.html
+++ b/homeusuario/simulados/index.html
@@ -7,7 +7,8 @@
   <title>Helenão</title>
 </head>
 <body>
-  <header>
+
+  <header class="header-principal">
      <nav class="navbar section-content" role="navigation" aria-label="Menu principal">
   <div class="nav-left">
     <div class="icon">
