demo do site finalizada

--- a/homeusuario/helenogpt/index.html
+++ b/homeusuario/helenogpt/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <link rel="stylesheet" href="style.css" />
-  <title>Helenão</title>
+  <title>Espaço do Saber</title>
 </head>
 <body>
 
@@ -40,6 +40,8 @@
       <a href="/homeusuario/simulados/index.html"><span class="emoji">📝</span> <span class="text">Simulados</span></a>
 
       <a href="/homeusuario/helenogpt/index.html"><span class="emoji">💬</span> <span class="text">Heleno</span></a>
+    
+      <a href="/homeusuario/pomodoro/index.html"><span class="emoji">🍅</span> <span class="text">Pomodoro</span></a>
     </nav>
   </div>
 
