--- a/homeusuario/pomodoro/index.html
+++ b/homeusuario/pomodoro/index.html
@@ -40,20 +40,39 @@
       <a href="/homeusuario/helenogpt/index.html"><span class="emoji">💬</span> <span class="text">Heleno</span></a>
 
       <a href="/homeusuario/pomodoro/index.html"><span class="emoji">🍅</span> <span class="text">Pomodoro</span></a>
-    </nav>
   </div>
 
-  <main class="home-container">
-  <div class="home-content">
-    <div class="home-image">
-      <img src="/img/estudo.png" alt="Imagem de estudo" />
+ <div class="pomodoro-page">
+  <div class="timer-box">
+    <img src="macaco.png" alt="Macaco fofo" class="monkey-img" />
+
+    <h1>Vamos Focar!</h1>
+
+    <div class="timer-display" id="timer">00:00</div>
+
+    <div class="controls">
+      <label>
+        Foco:
+        <input type="number" id="focusTime" value="25" min="1" /> min
+      </label>
+      <label>
+        Pausa:
+        <input type="number" id="breakTime" value="5" min="1" /> min
+      </label>
     </div>
-    <div class="home-text">
-      <h1 class="home-h1">Escolha como vai estudar hoje!</h1>
-      <p>Organize seus estudos, avance no seu ritmo e explore ferramentas incríveis. Escolha um modo de estudo no menu ao lado e bora aprender!</p>
+
+    <div class="buttons">
+      <button onclick="startTimer()">▶ Iniciar</button>
+      <button onclick="pauseTimer()">⏸ Pausar</button>
+      <button onclick="resetTimer()">Resetar</button>
     </div>
   </div>
-</main>
+</div>
+
+
+
+<script src="pomodoro.js"></script>
+
 
   <script>
     const toggleButton = document.getElementById('menu-toggle');
@@ -62,6 +81,57 @@
     toggleButton.addEventListener('click', () => {
       sidebar.classList.toggle('closed');
     });
+
+    let timer;
+let isRunning = false;
+let timeLeft = 0;
+
+function startTimer() {
+  if (isRunning) return;
+
+  const focusMinutes = parseInt(document.getElementById('focusTime').value) || 25;
+  const breakMinutes = parseInt(document.getElementById('breakTime').value) || 5;
+
+  if (timeLeft <= 0) {
+    timeLeft = focusMinutes * 60;
+  }
+
+  isRunning = true;
+  timer = setInterval(() => {
+    if (timeLeft <= 0) {
+      clearInterval(timer);
+      isRunning = false;
+      alert("Tempo de foco acabou! Hora da pausa 🍵");
+      timeLeft = breakMinutes * 60;
+      startTimer();
+    } else {
+      timeLeft--;
+      updateTimerDisplay();
+    }
+  }, 1000);
+}
+
+function pauseTimer() {
+  clearInterval(timer);
+  isRunning = false;
+}
+
+function resetTimer() {
+  clearInterval(timer);
+  isRunning = false;
+  timeLeft = 0;
+  updateTimerDisplay();
+}
+
+function updateTimerDisplay() {
+  const minutes = Math.floor(timeLeft / 60);
+  const seconds = timeLeft % 60;
+  document.getElementById('timer').textContent =
+    `${String(minutes).padStart(2, '0')}:${String(seconds).padStart(2, '0')}`;
+}
+
+updateTimerDisplay();
+
   </script>
 </body>
 </html>
