--- a/homeusuario/flashcards/index.html
+++ b/homeusuario/flashcards/index.html
@@ -4,20 +4,23 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <link rel="stylesheet" href="style.css" />
-  <title>Helenão</title>
+  <title>Espaço do Saber</title>
 </head>
 <body>
 
-  <header>
-    <nav class="navbar section-content" role="navigation" aria-label="Menu principal">
-      <div class="icon">
-        <img id="menu-toggle" class="icon" src="/img/icon.png" alt="Menu Toggle" />
-      </div>
-      <h2 class="logo-text"><a href="index.html" class="logo-link">Helenão</a></h2>
-      <ul class="nav-menu">
-        <li class="nav-item"><a href="#" class="nav-link">Logout</a></li>
-      </ul>
-    </nav>
+ <header class="header-principal">
+     <nav class="navbar section-content" role="navigation" aria-label="Menu principal">
+  <div class="nav-left">
+    <div class="icon">
+      <img id="menu-toggle" class="icon" src="/img/icon.png" alt="Menu Toggle" />
+    </div>
+    <h2 class="logo-text">
+      <a href="/homeusuario/index.html" class="logo-link">Espaço do Saber</a>
+    </h2>
+  </div>
+  <ul class="nav-menu">
+    <li class="nav-item"><a href="#" class="nav-link">Logout</a></li>
+  </ul>
   </header>
 
   <div class="sidebar">
@@ -34,6 +37,8 @@
       <a href="/homeusuario/simulados/index.html"><span class="emoji">📝</span> <span class="text">Simulados</span></a>
 
       <a href="/homeusuario/helenogpt/index.html"><span class="emoji">💬</span> <span class="text">Heleno</span></a>
+    
+      <a href="/homeusuario/pomodoro/index.html"><span class="emoji">🍅</span> <span class="text">Pomodoro</span></a>
     </nav>
   </div>
 
