--- a/homeusuario/simulados/simulado.html
+++ b/homeusuario/simulados/simulado.html
@@ -39,6 +39,8 @@
       <a href="/homeusuario/simulados/index.html"><span class="emoji">📝</span> <span class="text">Simulados</span></a>
 
       <a href="/homeusuario/helenogpt/index.html"><span class="emoji">💬</span> <span class="text">Heleno</span></a>
+    
+      <a href="/homeusuario/pomodoro/index.html"><span class="emoji">🍅</span> <span class="text">Pomodoro</span></a>
     </nav>
   </div>
 
